--- a/javaScript/数据结构.md
+++ b/javaScript/数据结构.md
@@ -1,4 +1,26 @@
 ## JS只有**3种**基本的数据结构
-    - 数字
-    - 字符串
-    - 布尔值
+- 数字
+- 字符串
+- 布尔值
+
+### 布尔值
+坑爹的地方之一： == 和 ===
+
+==
+判断两个值是否相等，判断前系统会先自动转换数据类型
+
+===
+比较两个值是否相等，进行相同的比较，不转换类型，如果类型不同只会返回false
+
+## 空值
+- undefined
+没有值。创建新变量时，如果没有使用=操作符，那么它的值就是undefined
+
+- null
+可以表达“这是空的”,确实想要表达没有内容时才会使用null
+
+把变量设置为null，可以很明确地让读取代码的人知道你没有设置值。
+如果设置为undefined，会让人认为你还没来得及设置一个值。
+
+## 数组
+访问数组元素的方法：dinosaurs[0]
