--- a/javaScript/面向对象编程.md
+++ b/javaScript/面向对象编程.md
@@ -4,3 +4,27 @@
 - 截取字符串
 .slice
 例如：.slice(2,5) 既包括2，又包括5，跟py不同
+
+### 数组
+- 查找长度
+- 添加元素
+    .push 在后面添加
+    .unshift 在前面添加
+- 删除元素
+    .pop 在数组末尾删除
+    .shift 删除并返回数组中的第一个元素
+- 把数组合并
+    .concat
+- 返回元素的索引
+    .indexOf
+- 把数组里的元素合并成一个字符串
+    .join() 括号里的是分隔符
+` var boringAnimals = ["Monkey","Cat","Fish","Lizard"];
+boringAnimals.join();`
+
+- 获取随机数字
+    Math.random()
+
+- 取整
+    Math.floor()
+
