--- a/javaScript/数据结构.md
+++ b/javaScript/数据结构.md
@@ -24,3 +24,18 @@
 
 ## 数组
 访问数组元素的方法：dinosaurs[0]
+
+## 查找数据
+- 用index访问数组
+- 用key访问对象
+- 正则表达式
+用/查找的内容/，例如：
+` var expression = /and/gi;  // 请修改这一行
+
+// 请只修改这条注释以上的代码
+
+// 用 andCount 存储 testString 中匹配到 expression 的次数
+var andCount = testString.match(expression).length;`
+
+    - g 表示全局
+    - i 表示忽略大小写
