正则表达式
跟着FCC初涉正则表达式

--- a/javaScript/数据结构.md
+++ b/javaScript/数据结构.md
@@ -39,3 +39,7 @@ var andCount = testString.match(expression).length;`
 
     - g 表示全局
     - i 表示忽略大小写
+    - \d 数字选择器
+    - \s 选择一个字符串中的空白
+        空白字符有 " " (空格符)、\r (回车符)、\n (换行符)、\t (制表符) 和 \f (换页符)
+    - \S 大写S匹配任何非空白字符
